tests/baselines/reference/classAbstractDeclarations.d.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(2,5): error TS1236: 'abstract' modifier can only appear on a class or member function declaration.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(2,5): error TS1240: Abstract member functions cannot have an implementation.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(2,28): error TS1184: An implementation cannot be declared in ambient contexts.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(11,15): error TS2515: Non-abstract class 'CC' does not implement inherited abstract member 'AA.foo'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(13,15): error TS2515: Non-abstract class 'DD' does not implement inherited abstract member 'BB.foo'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts(17,15): error TS2515: Non-abstract class 'FF' does not implement inherited abstract member 'CC.foo'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractDeclarations.d.ts (6 errors) ====
    declare abstract class A {
        abstract constructor() {}
        ~~~~~~~~
!!! error TS1236: 'abstract' modifier can only appear on a class or member function declaration.
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1240: Abstract member functions cannot have an implementation.
                               ~
!!! error TS1184: An implementation cannot be declared in ambient contexts.
    }
    
    declare abstract class AA {
        abstract foo();
    }
    
    declare abstract class BB extends AA {}
    
    declare class CC extends AA {}
                  ~~
!!! error TS2515: Non-abstract class 'CC' does not implement inherited abstract member 'AA.foo'.
    
    declare class DD extends BB {}
                  ~~
!!! error TS2515: Non-abstract class 'DD' does not implement inherited abstract member 'BB.foo'.
    
    declare abstract class EE extends BB {}
    
    declare class FF extends CC {}
                  ~~
!!! error TS2515: Non-abstract class 'FF' does not implement inherited abstract member 'CC.foo'.
    
    declare abstract class GG extends CC {}
    
    declare abstract class AAA {}
    
    declare abstract class BBB extends AAA {}
    
    declare class CCC extends AAA {}